ClinicaVeterinaria/force-app/main/default/objects/Visita__c/Visita__c.object-meta.xml
<CustomObject>
    <label>Visita</label>
    <nameField>
        <displayFormat>VI-{0000}</displayFormat>
        <label>Visita Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>