ClinicaVeterinaria/force-app/main/default/objects/Visita__c/fields/Fecha_Visita__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Visita__c</fullName>
    <label>Fecha Visita</label>
    <required>true</required>
    <type>Date</type>
</CustomField>