ClinicaVeterinaria/force-app/main/default/objects/Visita__c/fields/Hora_Visita__c.field-meta.xml
<CustomField>
    <fullName>Hora_Visita__c</fullName>
    <label>Hora Visita</label>
    <required>true</required>
    <type>Time</type>
</CustomField>