ClinicaVeterinaria/force-app/main/default/objects/Visita__c/fields/Mascota__c.field-meta.xml
<CustomField>
    <fullName>Mascota__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Mascota</label>
    <referenceTo>Mascota__c</referenceTo>
    <relationshipLabel>Visitas</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>