ClinicaVeterinaria/force-app/main/default/objects/Visita__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>