ClinicaVeterinaria/force-app/main/default/objects/Visita__c/fields/Tratamiento__c.field-meta.xml
<CustomField>
    <fullName>Tratamiento__c</fullName>
    <label>Tratamiento</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>